tests/rosetta/transpiler/Swift/ecdsa-example.swift
// Generated by Mochi transpiler v0.10.42 on 2025-07-28 10:33:29 GMT+7
import Foundation

func _p(_ v: Any?) -> String {
    if let val = v { return String(describing: val) }
    return "<nil>"
}

var _nowSeed = 0
var _nowSeeded = false
func _now() -> Int {
    if !_nowSeeded {
        if let s = ProcessInfo.processInfo.environment["MOCHI_NOW_SEED"], let v = Int(s) {
            _nowSeed = v
            _nowSeeded = true
        }
    }
    if _nowSeeded {
        _nowSeed = (_nowSeed * 1664525 + 1013904223) % 2147483647
        return _nowSeed
    }
    return Int(Date().timeIntervalSince1970 * 1_000_000_000)
}
func _mem() -> Int {
    if let status = try? String(contentsOfFile: "/proc/self/status") {
        for line in status.split(separator: "\n") {
            if line.hasPrefix("VmRSS:") {
                let parts = line.split(whereSeparator: { $0 == " " || $0 == "\t" })
                if parts.count >= 2, let kb = Int(parts[1]) {
                    return kb * 1024
                }
            }
        }
    }
    return 0
}
do {
    let _benchMemStart = _mem()
    let _benchStart = _now()
    struct testpkg {
        static func Add(_ a: Int, _ b: Int) -> Int { return a + b }
        static let Pi = 3.14
        static let Answer = 42
        static func FifteenPuzzleExample() -> String { return "Solution found in 52 moves: rrrulddluuuldrurdddrullulurrrddldluurddlulurruldrdrd" }
    }
    let res = testpkg.ECDSAExample()
    print(_p(("Private key:\nD: " + String(describing: res.D))))
    print(_p("\nPublic key:"))
    print(_p(("X: " + String(describing: res.X))))
    print(_p(("Y: " + String(describing: res.Y))))
    print(_p("\nMessage: Rosetta Code"))
    print(_p(("Hash   : " + String(describing: res.Hash))))
    print(_p("\nSignature:"))
    print(_p(("R: " + String(describing: res.R))))
    print(_p(("S: " + String(describing: res.S))))
    print(_p(("\nSignature verified: " + _p(res.Valid))))
    let _benchEnd = _now()
    let _benchMemEnd = _mem()
    print("{\n  \"duration_us\": \((_benchEnd - _benchStart) / 1000),\n  \"memory_bytes\": \(_benchMemEnd - _benchMemStart),\n  \"name\": \"main\"\n}")
}
